cw #3 full code

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    hello html!!!
-    
+<body >
+    <label style="text-align: center;width:300px; display : inline-block">
+        hello html!!!
+    </label>
+    <label style="text-align: center;width:300px;display :inline-block">
+        hello html!!!
+    </label>
+    <a href="http://www.google.com">
+        <img src="google.jpg" alt=""
+        style="width: 100px">
+        <label>google</label>
+    </a>
+    <a href="http://www.google.com">
+        <img src="google.jpg" alt=""
+        style="width: 100px">
+        <label>google</label>
+    </a>
 </body>
 </html>
