--- a/index.html
+++ b/index.html
@@ -4,23 +4,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+     
+    </style>
 </head>
 <body >
-    <label style="text-align: center;width:300px; display : inline-block">
-        hello html!!!
-    </label>
-    <label style="text-align: center;width:300px;display :inline-block">
-        hello html!!!
-    </label>
-    <a href="http://www.google.com">
+   <label style="text-align: center; display: block;">
+   <p>
+       <a href="http://www.google.com">
         <img src="google.jpg" alt=""
         style="width: 100px">
         <label>google</label>
     </a>
-    <a href="http://www.google.com">
-        <img src="google.jpg" alt=""
+   </p>
+   <p>
+    <a href="http://www.nike.com">
+        <img src="nike.png" alt=""
         style="width: 100px">
-        <label>google</label>
+        <label>Nike</label>
     </a>
+    </p>
+    <p>
+    <a href="http://www.nba.com">
+        <img src="nba.png" alt=""
+        style="width: 100px">
+        <label>nba</label>
+    </a>
+    </p>
+    <p>
+    <a href="http://www.jordan.com">
+        <img src="jordan.png" alt=""
+        style="width: 100px">
+        <label>jordan</label>
+    </a>
+    <p>
+        <a href="http://www.adidas.com">
+        <img src="adidas.png" alt=""
+        style="width: 100px">
+        <label>adidas</label>
+    </a>
+    </p>
+    </label>
 </body>
 </html>
