--- a/index.html
+++ b/index.html
@@ -9,41 +9,41 @@
     </style>
 </head>
 <body >
-   <label style="text-align: center; display: block;">
-   <p>
+   <label style="display :block; text-align: center">
+<p>
        <a href="http://www.google.com">
-        <img src="google.jpg" alt=""
-        style="width: 100px">
-        <label>google</label>
+        <img src="http://commons.wikimedia.org/wiki/File:Google_%22G%22_Logo.svg" alt=""
+        style="width: 40px">
+        <label style="width: 200px;display :inline-block; text-align:  left;font-size: 20px ;">google</label>
     </a>
+   
    </p>
-   <p>
-    <a href="http://www.nike.com">
-        <img src="nike.png" alt=""
-        style="width: 100px">
-        <label>Nike</label>
+    <a href="http://www.nike.com"   >
+        <img src="http://en.wikipedia.org/wiki/Swoosh#/media/File:Logo_NIKE.svg" alt=""
+        style="width: 40px">
+        <label style="width: 200px;display :inline-block;text-align:  left;font-size: 20px ;">nike</label>
+    </a>
+    
+    <p>
+    <a href="http://www.nba.com"  >
+        <img src="http://logos-world.net/nba-logo/" alt=""
+        style="width: 40px">
+        <label style="width: 200px;display :inline-block;text-align:  left;font-size: 20px ;">nba</label>
     </a>
     </p>
+    
+    <a href="http://www.jordan.com"  >
+        <img src="http://customeazy.com/products/jordan-logo-iron-on-sticker-heat-transfer" alt=""
+        style="width: 40px">
+        <label style="width: 200px;display :inline-block;text-align:  left;font-size: 20px ;">jordan</label>
+    </a>
     <p>
-    <a href="http://www.nba.com">
-        <img src="nba.png" alt=""
-        style="width: 100px">
-        <label>nba</label>
+        <a href="http://www.adidas.com" >
+        <img src="http://legal-patent.com/international-intellectual-property/adidas-3-stripe-design-likelihood-confusion-not-trefoil-logo/" alt=""
+        style="width: 40px">
+        <label style="width: 200px;display :inline-block;text-align:  left;font-size: 20px ;">adidas</label>
     </a>
     </p>
-    <p>
-    <a href="http://www.jordan.com">
-        <img src="jordan.png" alt=""
-        style="width: 100px">
-        <label>jordan</label>
-    </a>
-    <p>
-        <a href="http://www.adidas.com">
-        <img src="adidas.png" alt=""
-        style="width: 100px">
-        <label>adidas</label>
-    </a>
-    </p>
-    </label>
+   </label>
 </body>
 </html>
